2000-12-06	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h: Removed incorrect error case.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: assoc.h, error.h, libio_.h, libio.h,
	and libcsupport.h moved from libc to lib/include/rtems and
	now must be referenced as <rtems/XXX.h>.   Header file order
	was cleaned up while doing this.

2000-10-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am, console/Makefile.am, shmsupp/Makefile.am,
	startup/Makefile.am, timer/Makefile.am, wrapup/Makefile.am,
	start/Makefile.am: Include compile.am

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.