@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../../../../../../aclocal
 
 # wrapup is the one that actually builds and installs the library
 #  from the individual .rel files built in other directories
-SUBDIRS = include start startup clock console shmsupp timer wrapup
+SUBDIRS = include start startup clock console timer wrapup
 
 include $(top_srcdir)/../../bsp.am
 
