@@ -17,10 +17,7 @@ RTEMS_CANONICALIZE_TOOLS
 RTEMS_ENV_RTEMSBSP
 RTEMS_CHECK_CUSTOM_BSP(RTEMS_BSP)
 RTEMS_CHECK_BSP_CACHE(RTEMS_BSP)
-RTEMS_CHECK_MULTIPROCESSING(RTEMS_BSP)
 RTEMS_CANONICAL_HOST
-
-AM_CONDITIONAL(HAS_MP,test "$HAS_MP" = "yes")
 
 RTEMS_PROJECT_ROOT
 
@@ -30,7 +27,6 @@ Makefile
 clock/Makefile
 console/Makefile
 include/Makefile
-shmsupp/Makefile
 start/Makefile
 startup/Makefile
 timer/Makefile
