@@ -1,2 +1,0 @@
-Makefile
-Makefile.in
